--- a/ff.resource_editor/ff.resource_editor.csproj
+++ b/ff.resource_editor/ff.resource_editor.csproj
@@ -4,6 +4,12 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Efficient.Json" Version="1.1.4" />
+    <ProjectReference Include="..\ff.wpf_tools\ff.wpf_tools.csproj" />
+  </ItemGroup>
 
 </Project>
