Use ff_wpf_tools as a submodule

--- a/ff.resource_editor/ff.resource_editor.csproj
+++ b/ff.resource_editor/ff.resource_editor.csproj
@@ -76,7 +76,7 @@
 
   <ItemGroup>
     <PackageReference Include="Efficient.Json" Version="1.1.4" />
-    <ProjectReference Include="..\ff.wpf_tools\ff.WpfTools.csproj" />
+    <ProjectReference Include="..\vendor\ff_wpf_tools\ff.wpf_tools\ff.WpfTools.csproj" />
   </ItemGroup>
 
   <ItemGroup>
